--- a/main.html
+++ b/main.html
@@ -14,7 +14,7 @@
         <span class="menu-icon" onclick="abrirMenu()">&#9776;</span>
 
         <div id="logo" class="logo">
-            <img src="/src/images/logo.png" alt="Logo">
+            <img src="./src/images/logo.png" alt="Logo">
         </div>
 
         <div class="user-icon">
