--- a/main.html
+++ b/main.html
@@ -52,7 +52,7 @@
         <a href="javascript:void(0)" class="closebtn" onclick="cerrarMenu()">&times;</a>
         
         <div class="logo-container">
-            <img src="./src/images/logo.svg" alt="sidebar-logo">
+            <img src="./src/images/logo.png" alt="sidebar-logo">
         </div>
         
         <a href="#">¿Quienes Somos? </a>
